manifests/deployment-guestbook.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - name: guestbook
        image: yohangracia/dojo-guestbook:latest
        livenessProbe:
          httpGet:
            path: /info
            port: http
          initialDelaySeconds: 60
          timeoutSeconds: 5    
        ports:
        - name: http
          containerPort: 3000
