manifests/deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:5
        ports:
        - containerPort: 6379
        volumeMounts:
          - name: vol
            mountPath: /data
      volumes:
      - name: vol
        emptyDir: {}
