manifests/pod-guestbook.yml
kind: Pod
apiVersion: v1
metadata:
  name: guestbook
  labels: 
    app: guestbook
spec:
  containers:
  - name: guestbook
    image: yohangracia/dojo-guestbook:latest
    ports:
    - name: http
      containerPort: 3000
