manifests/service-guestbook.yml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
spec:
  selector:
    app: guestbook
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
