manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: padok-guestbook.fr
    http:
      paths:
        - path: /
          backend:
            serviceName: guestbook
            servicePort: 3000
